--- a/css/tailwind/tailwind.css
+++ b/css/tailwind/tailwind.css
@@ -911,10 +911,6 @@ video {
   width: 66.666667%;
 }
 
-.w-20 {
-  width: 5rem;
-}
-
 .w-4 {
   width: 1rem;
 }
@@ -935,12 +931,16 @@ video {
   width: 13rem;
 }
 
-.w-64 {
-  width: 16rem;
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-8 {
   width: 2rem;
+}
+
+.w-80 {
+  width: 20rem;
 }
 
 .w-96 {
@@ -1015,6 +1015,10 @@ video {
 
 .resize {
   resize: both;
+}
+
+.list-decimal {
+  list-style-type: decimal;
 }
 
 .list-disc {
@@ -1329,16 +1333,12 @@ video {
   padding-bottom: 8rem;
 }
 
-.pl-3 {
-  padding-left: 0.75rem;
-}
-
 .pl-9 {
   padding-left: 2.25rem;
 }
 
-.pr-3 {
-  padding-right: 0.75rem;
+.pr-10 {
+  padding-right: 2.5rem;
 }
 
 .pr-4 {
@@ -1649,12 +1649,6 @@ video {
   .dark\:hover\:text-white:hover {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-}
-
-@media (min-width: 640px) {
-  .sm\:max-w-sm {
-    max-width: 24rem;
   }
 }
 
