deploy: 6a5314864758ca82ffa3f49dab8a8dbca7fa49ab

--- a/css/tailwind/tailwind.css
+++ b/css/tailwind/tailwind.css
@@ -618,10 +618,6 @@ video {
   }
 }
 
-.static {
-  position: static;
-}
-
 .fixed {
   position: fixed;
 }
@@ -1495,6 +1491,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-yellow-200 {
+  --tw-text-opacity: 1;
+  color: rgb(253 231 194 / var(--tw-text-opacity));
 }
 
 .text-yellow-50 {
